--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
     <div class="Aboutbody">
         <div class="navbar">
             <div class="logo">
-                <img src="images/Yoyo Airlines Logo.png" alt="Airlines">
+                <img src="Yoyo Airlines Logo.png" alt="Airlines">
             </div>
             <nav>
                 <ul>
@@ -23,7 +23,7 @@
         </div>
         <section class="about">
             <div class="main">
-                <img src="images/airportbg.jpg">
+                <img src="airportbg.jpg">
                 <div class="about-text">
                     <h1>About Us</h1>
                     <p>An airline is a company that provides air transport services for traveling passengers and
