--- a/Account.html
+++ b/Account.html
@@ -11,7 +11,7 @@
     <div class="body">
         <div class="navbar">
             <div class="logo">
-                <img src="images/Yoyo Airlines Logo.png" alt="Airlines">
+                <img src="Yoyo Airlines Logo.png" alt="Airlines">
             </div>
             <nav>
                 <ul>
